--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,42 +1,79 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:orientation="vertical" >
-	
-    <TextView
-        android:id="@+id/text_usuario"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:text="@string/usuario" />
-    
-    <EditText
-        android:id="@+id/usuario"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="8"
-        android:hint="@string/usuario" />
-    
-    <TextView
-        android:id="@+id/text_contrasenia"
+    android:background="#f000"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity" >
+
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/contrasenia" />
-    
-    <EditText
-        android:id="@+id/contrasenia"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="8"
-        android:hint="@string/contrasenia" 
-    	android:inputType="textPassword" />
+        android:layout_gravity="center"
+        android:orientation="vertical" >
 
-    <Button
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/TextPassword"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/Usuario"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#fff" />
+
+        <EditText
+            android:id="@+id/editUsuario"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10" >
+
+            <requestFocus />
+        </EditText>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/boton_iniciar" />
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/TextUsuario"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/Password"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#fff" />
+
+        <EditText
+            android:id="@+id/editPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPassword" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="30dp" >
+
+        <Button
+            android:id="@+id/buttonIniciar"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Iniciar_sesion"
+            android:textSize="18sp" />
+
+    </LinearLayout>
 
 </LinearLayout>
